# JanusX

./: .gitignore  Cargo.toml  README.md  dockerfile  dockerfile_arm  install.bat  install.sh  jx  pyproject.toml
conda/recipe/: meta.yaml
doc/: README_zh.md  containerbuild.md  docker.sh  unix.sh  windows.bat
ext/assoc_rs/: Cargo.toml  pyproject.toml
ext/assoc_rs/assoc/: __init__.py  _assoc.py
ext/assoc_rs/python/assoc_rs/: __init__.py  _assoc.py
ext/assoc_rs/src/: lib.rs
ext/gfreader_rs/: Cargo.toml  pyproject.toml
ext/gfreader_rs/src/: lib.rs
ext/glm_rs/src/: lib.rs
ext/lmm_rs/: Cargo.toml  pyproject.toml
ext/lmm_rs/src/: lib.rs
module/: gformat.py  grm.py  gs.py  gwas.py  gwasplot.py  jx.py  pca.py  postGWAS.py
module/_common/: outformat.py
python/JanusX/script/: JanusX.py  grm.py  gs.py  gwas.py  pca.py  postGWAS.py
python/janusx/gfreader/: base.py  gfreader.py
python/janusx/script/: JanusX.py  gs.py  gwas.py
rust/JanusX_rs/: Cargo.toml
rust/JanusX_rs/python/JanusX_rs/: assoc.py  rEVD.py
rust/JanusX_rs/src/: gfcore.rs  grm.rs  lib.rs
rust/gfreader_rs/python/gfreader_rs/: __init__.py  _gfreader.py
rust/gfreader_rs/src/: lib.rs
src/: assoc.rs  gfcore.rs  gfreader.rs  gmerge.rs  lib.rs
src/bioplotkit/: gsplot.py  manhanden.py  pcshow.py
src/gfreader/: base.py
src/pyBLUP/: QK2.py  farmcpu.py  gwas.py  mlm.py  slim.py
src/rust2py/: assoc.py
src/script/: JanusX.py  admixture.py  farmcpu.py  gs.py  gwas.py  gwas2.py  lm.py  lmm.py  pca.py  postGWAS.py
