[project]
name = "JanusX"
version = "1.0.0"
description = "A Suite of Genotyping Tools for Genome-Wide Association Study and Genomic Selection"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "psutil",
    "tqdm",
    "joblib>=1.5.2",
    "bed-reader==1.0.6",
]
authors = [
  {name = "Jingxian FU", email = "827888724@qq.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["GWAS", "GS", "REML", "PCA"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyBLUP","src/gfreader","src/bioplotkit","src/script"]

[project.scripts]
jx = "script.JanusX:main"