[package]
name = "assoc_rs"
version = "0.1.0"
edition = "2021"
authors = ["Jingxian FU <827888724@qq.com>"]
description = "Rust core for gwas module in JanusX"
license = "MIT"
exclude = [
    "target/*",
]

[lib]
name = "assoc_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
numpy = { version = "0.21.0" }
ndarray = "0.15"
rayon = "1.10"
libm = "0.2"