[project]
name = "assoc_rs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "joblib>=1.5.2",
    "scipy",
    "tqdm"
    ]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "assoc_rs"
python-source = "python"