[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "lmm-rs"
version = "0.1.0"
description = "Fast REML-based mixed model GWAS (Rust core, Python API)"
authors = [
  { name = "Jingxian FU", email = "<827888724@qq.com>" }
]
requires-python = ">=3.8"

dependencies = [
  "numpy>=2.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/your-repo"

[tool.maturin]
# 绑定方式：pyo3
bindings = "pyo3"

# 如果你只想生成 abi3 wheel，可以打开这个选项（可选）
# compatibility = "abi3"

# 如果模块名和 crate 名一致（这里都是 lmm_rs），可以不用写 module-name
# module-name = "lmm_rs"